# icon

./: README.md
.github/workflows/: ci.yml
icon_primitive/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
icon_primitive/.github/workflows/: ci.yml
icon_primitive/assets/calib_indices/: cifar10_train_1024_seed0.npy
icon_primitive/assets/eval_indices/: cifar10_test_8192_seed0.npy
icon_primitive/configs/: base_protocol.yaml
icon_primitive/configs/manifests/: ICON_Primitive_Run_Manifest_Base153_v1.1.csv  ICON_Primitive_Run_Manifest_Extensions_v1.1.csv  manifest_1A.yaml
icon_primitive/configs/packs/: ICON_Primitive_Constants_Template_v1.1.yaml  ICON_Primitive_Independence_Configs_v1.1.csv  ICON_Primitive_Independence_Configs_v1.1.yaml  (+4 more)
icon_primitive/docs/: ICON_Primitive_ConfigPacks_v1.1_README.md  ICON_Primitive_Experiment_Spec_v1.1.md  ICON_Primitive_Independence_Config_Generation_Rules_v1.1.md  ICON_Primitive_repo_review_toClaude_2026-01-18.md  ICON_Primitive_v1.1_Gapless_Checklist_toClaude.md  ICON_Series_Detailed_Design.md  estimator_policy.md  protocol.md  reproducibility.md
icon_primitive/examples/: sample_constants.yaml
icon_primitive/icon_primitive/: __init__.py
icon_primitive/schemas/: ICON_Primitive_Receipt_Example_v1.1.json  ICON_Primitive_Receipt_Schema_v1.1.json
icon_primitive/scripts/: __init__.py  aggregate.py  generate_eval_indices.py  generate_stems.py  run_manifest.py  run_single.py
icon_primitive/tests/: test_imports.py
icon_primitive/tools/: reproduce_constants.py  verify_independence.py  verify_robustness.py
(+30 files in other folders)
